--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
       "resolved": "https://registry.npmjs.org/figlet/-/figlet-1.2.0.tgz",
       "integrity": "sha1-bEZTc3j6tkkUa1phQ92gGbQwtBA="
     }
+  },
+  "scripts": {
+   "start": "node server.js"
   }
 }
