--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "lockfileVersion": 1,
   "dependencies": {
     "figlet": {
-      "version": "1.2.0",
-      "resolved": "https://registry.npmjs.org/figlet/-/figlet-1.2.0.tgz",
+      "version": "1.5.0",
+      "resolved": "https://registry.npmjs.org/figlet/-/figlet-1.5.0.tgz",
       "integrity": "sha1-bEZTc3j6tkkUa1phQ92gGbQwtBA="
     }
   },
   "scripts": {
    "start": "node server.js"
+ },
+ "engines": {
+    "node": "12.18.3"
   }
 }
